# ha-lifx-beta

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  info.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: hassfest.yml
custom_components/lifx/: __init__.py  binary_sensor.py  button.py  config_flow.py  connection.py  const.py  coordinator.py  discovery.py  entity.py  light.py  manager.py  manifest.json  select.py  sensor.py  services.yaml  strings.json  switch.py  util.py
custom_components/lifx/aiolifx/: aiolifx.py  message.py  msgtypes.py  unpack.py
custom_components/lifx/translations/: bg.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es-419.json  es.json  et.json  fr.json  he.json  hr.json  hu.json  id.json  it.json  ja.json  ko.json  lb.json  nl.json  no.json  pl.json  pt-BR.json  pt.json  ro.json  ru.json  sk.json  sl.json  sv.json  tr.json  uk.json  zh-Hans.json  zh-Hant.json
