[tool.poetry]
name = "ha-lifx-beta"
version = "2022.12.6"
description = "LIFX Beta integration"
authors = ["Avi Miller <me@dje.li>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ha_lifx_beta", from = "custom_components"}]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
homeassistant = "2023.4.0"
colorlog = "^6.7.0"
aiolifx = "^0.8.10"
aiolifx_effects = "^0.3.1"
aiolifx_themes = "^0.4.0"
backoff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"
pytest-asyncio = "^0.20.3"
pytest-aiohttp = "^1.0.4"

[tool.black]
target-version = ["py39", "py310"]

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "homeassistant",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
